# CODEGEN-Studio

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Makefile  README.md  ROADMAP.md  index.html  package-lock.json  package.json  script.js  turbo.json
.github/workflows/: build.yml  ci-cd.yml  deploy-website.yml  test.yml
.tauri/icons/: README.md
config/: config.json  default.json
docs/: ARCHITECTURE.md  BUILD.md  USER_GUIDE.md
frontend/: index.html  package.json  package2.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  test-render.tsx
frontend/src/assets/icons/: README.md
frontend/src/assets/images/: README.md
frontend/src/components/editor/: CodeEditor.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/panels/: AIPanel.tsx
frontend/src/hooks/: useAI.ts  useProject.ts
frontend/src/lib/: constants.ts  mock-tauri.ts  utils.ts
frontend/src/lib/api/: client.ts  index.ts
frontend/src/stores/: app-store.ts
frontend/src/types/: index.ts
java-backend/: pom.xml
java-backend/src/main/java/com/codegen/: CodegenApplication.java
java-backend/src/main/java/com/codegen/config/: AppConfig.java  WebConfig.java
java-backend/src/main/java/com/codegen/controller/: ProjectController.java
java-backend/src/main/java/com/codegen/engine/: AIEngine.java  TemplateEngine.java
java-backend/src/main/java/com/codegen/integration/: AIIntegrationService.java  FileSystemIntegration.java
java-backend/src/main/java/com/codegen/model/: Project.java  Template.java
java-backend/src/main/java/com/codegen/repository/: ProjectRepository.java  TemplateRepository.java
java-backend/src/main/java/com/codegen/service/: ProjectService.java  TemplateService.java
java-backend/src/main/java/com/codegen/util/: FileUtils.java  ValidationUtils.java
java-backend/src/main/resources/: application.properties
java-backend/src/main/resources/static/default-ai-models/: README.md
java-backend/src/main/resources/templates/: templates.json
java-backend/src/main/resources/templates/react-native/: App.js.vm
resources/: README.md
resources/ai-models/: README.md  model-manifest.json
resources/licenses/: MIT.txt
scripts/: build-all.ps1  download-models.ps1  setup-java.ps1  setup-rust.ps1  verify-structure.ps1
shared/config/: app-config.ts
shared/schemas/: project-schema.ts
shared/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_engine.rs  commands.rs  encryption.rs  file_vault.rs  java_launcher.rs  llama_bridge.rs  main.rs  model_manager.rs  models.rs  privacy_guard.rs  template_processor.rs  utils.rs
tests/frontend-tests/: vitest.config.ts
tests/frontend-tests/src/: App.test.tsx
tests/java-tests/: pom.xml
tests/rust-tests/: integration_test.rs
website/: index.html  style.css
(+6 files in other folders)
