[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open", "dialog", "fs", "os", "path", "process", "shell"] }
tokio = { version = "1.0", features = ["full", "test-util", "rt-multi-thread"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
walkdir = "2.4"
zip = "0.6"
aes-gcm = { version = "0.10", features = ["std"] }
rand = "0.8"
sysinfo = "0.29"
comfy-table = "7.0"
indicatif = "0.17"
once_cell = "1.18"
regex = "1.9"
tempfile = "3.8"
which = "4.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
rustyline = "12.0"
dirs = "5.0"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

# Test dependencies
rstest = "0.18"
mockall = "0.11"

# AI/ML dependencies
llama-rs = "0.3.0"
tokenizers = { version = "0.13", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ai = ["llama-rs", "tokenizers"]
test = ["ai", "mockall"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.test]
opt-level = 0
debug = true

