[package]
name = "codegen-studio"
version = "0.1.0"
description = "Privacy-first development studio"
authors = ["CodeGen Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open", "dialog", "fs", "os", "path", "process", "shell", "notification"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
walkdir = "2.4"
zip = "0.6"
aes-gcm = { version = "0.10", features = ["aes", "std"] }
rand = "0.8"
sysinfo = "0.29"
comfy-table = "7.0"
indicatif = "0.17"
once_cell = "1.18"
regex = "1.9"
tempfile = "3.8"
which = "4.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
rustyline = "12.0"
dirs = "5.0"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

# AI/ML dependencies
llama-rs = { git = "https://github.com/rustformers/llama-rs", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ai = ["llama-rs"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
